# Barnes-Hut-N-Body

./: README.md  makefile  nbody0.c  nbody1.c  nbodySOA.c
2D/: makefile  nbody0.c  nbodyASM.c  nbodySOA.c
2D/QUAD/: geometry.h  global.h  main.c  quadTree.h  simulation.h
2D/data/data_processing/: gnu_prec.gp  perf_process.c  prec_process.c
2D/data/files/: quadPrec  soaPrec
2D/data/files_sauvegarde/: basePrec
3D/0/: makefile  nbody.c  nbody.g  nbody.gcc.optrpt
3D/Graphics/: CMakeLists.txt  nbody.cpp
3D/Graphics/external_libs/: CMakeLists.txt
3D/Graphics/external_libs/glad/: CMakeLists.txt  glad.c  glad.h
3D/Graphics/external_libs/glm/: CMakeLists.txt
3D/Graphics/external_libs/imgui/: CMakeLists.txt
3D/Graphics/external_libs/imgui/include/: imgui.h
3D/Graphics/external_libs/imgui/src/: imgui_demo.cpp
3D/Graphics/external_libs/stb_image/: CMakeLists.txt
3D/Graphics/mylib/: CMakeLists.txt
3D/Graphics/mylib/include/: camera.h  instanced.h  mesh.h  model.h  mylib.h  shaders.h
3D/Graphics/mylib/src/: camera.cpp  shaders.cpp
3D/Graphics/shaders/: asteroids.fs
3D/Graphics/simulation/: CMakeLists.txt
3D/Graphics/simulation/include/: box.h  init.h  octree.h  simulation.h  update.h
3D/Graphics/simulation/src/: init.cpp  octree.cpp  update.cpp
3D/OCTREE/: geometry.h  global.h  main.c  makefile  memtest.c  nbody.gcc.optrpt  octree  octree.h  perf.data  simulation.h  test.c
3D/OCTREE/maqao_2021-12-23_17-42-29/: config.lua  content.lua  index.html  last_command.txt
3D/OCTREE/maqao_2021-12-23_17-42-29/RESULTS/octree_one_html/: application.html  config.html  fcts_and_loops.html  log.html  loops_index.html  panel.html  topology.html
3D/OCTREE/maqao_2021-12-23_17-42-29/RESULTS/octree_one_html/functions/: empty_function.html  octree_1.html  octree_18.html  octree_21.html  octree_24.html
3D/OCTREE/maqao_2021-12-23_17-42-29/RESULTS/octree_one_html/loops/: empty_loop.html  octree_1.html  octree_11.html
3D/OCTREE/maqao_2021-12-23_17-42-29/RESULTS/octree_one_html/modals/: fct_octree_1.html  fct_octree_18.html  fct_octree_18_all.html  fct_octree_18_sorted.html  fct_octree_1_all.html  fct_octree_1_sorted.html  fct_octree_21.html  fct_octree_21_all.html  fct_octree_21_sorted.html  fct_octree_24.html  fct_octree_24_all.html  fct_octree_24_sorted.html  octree_1.html  octree_11.html  octree_11_all.html  octree_11_sorted.html  octree_1_all.html  octree_1_sorted.html
3D/OCTREE/maqao_2021-12-23_17-42-29/RESULTS/octree_one_html/topo/: run_0_SivadonUbuntu_35931_35931.html
3D/OCTREE/maqao_2021-12-23_17-42-29/logs/: log.txt
3D/OCTREE/maqao_2021-12-23_17-42-29/shared/lprof_npsu_run_0/: lprof_blocks.csv  lprof_blocks_SivadonUbuntu_35931_35931.csv  lprof_functions.csv  lprof_functions_SivadonUbuntu_35931_35931.csv  lprof_loops.csv  lprof_loops_SivadonUbuntu_35931_35931.csv  lprof_modules.csv
3D/OCTREE/maqao_2021-12-23_17-42-29/shared/run_0/: global_metrics.lua  lprof_categorization.csv  report_application_loop_profile.csv  report_path_number_profile.csv  static_speedup_if.csv  time.lua
3D/OCTREE/maqao_2021-12-23_17-42-29/static_data/: local_vars.txt
3D/OCTREE/maqao_2021-12-23_17-42-29/static_data/asm/: fct_octree_1.asm  fct_octree_18.asm  fct_octree_21.asm  fct_octree_24.asm  octree_1.asm  octree_11.asm
3D/OCTREE/maqao_2021-12-23_17-42-29/static_data/cqa/: fct_octree_18_html.lua  fct_octree_18_text.lua  fct_octree_1_html.lua  fct_octree_1_text.lua  fct_octree_21_html.lua  fct_octree_21_text.lua  fct_octree_24_html.lua  fct_octree_24_text.lua  octree_11_cqa.csv  octree_11_html.lua  octree_11_text.lua  octree_1_cqa.csv  octree_1_html.lua  octree_1_text.lua
3D/OCTREE/maqao_2021-12-23_17-42-29/static_data/groups/: octree_1.lua  octree_11.lua
3D/OCTREE/maqao_2021-12-23_17-42-29/static_data/hierarchy/: fct_octree_1.lua  fct_octree_21.lua  fct_octree_24.lua
3D/OCTREE/maqao_2021-12-23_17-42-29/tools/lprof_npsu_run_0/: executable.lprof  options.lua  procinfo_SivadonUbuntu-35931.lua
3D/OCTREE/maqao_2021-12-23_17-42-29/tools/lprof_npsu_run_0/SivadonUbuntu/35931/: collect_data.lprof
3D/OCTREE/maqao_2021-12-23_17-42-29/tools/lprof_npsu_run_0/SivadonUbuntu/libs/: [vvar].lprof
3D/SOA/: nbody.c  nbody.g  nbody.gcc.optrpt
3D/data/: makefile  perfProcess
3D/data/data_processing/: gnu_perf.gp  gnu_perf_speedup.gp  perfProcess.c
PERF/: gnu_script_1000.gp  gnu_script_500.gp
PRECISION/: comparaison  comparaison.c  gnu_script_SOA.gp  gnu_script_quad.gp
QUAD/: geometry.h  global.h  main.c  memtest.c  quadTree.h  simulation.h  test.c
data/data_processing/: gnu_perf.gp  gnu_perf_speedup.gp  gnu_prec.gp
